--- a/app/src/main/res/drawable/ic_sos.xml
+++ b/app/src/main/res/drawable/ic_sos.xml
@@ -2,9 +2,19 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:viewportHeight="24">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M12,22c1.1,0 2,-0.9 2,-2h-4c0,1.1 0.9,2 2,2zM18,16v-5c0,-3.07 -1.63,-5.64 -4.5,-6.32L13.5,4c0,-0.83 -0.67,-1.5 -1.5,-1.5s-1.5,0.67 -1.5,1.5v0.68C7.64,5.36 6,7.92 6,11v5l-2,2v1h16v-1l-2,-2zM16,17L8,17v-6c0,-2.48 1.51,-4.5 4,-4.5s4,2.02 4,4.5v6z"/>
+      android:strokeWidth="1"
+      android:pathData="M5.269,9.7499C5.2678,8.8604 5.4426,7.9795 5.7834,7.1579C6.1242,6.3363 6.6243,5.5903 7.2548,4.9628C7.8852,4.3354 8.6337,3.8389 9.4569,3.502C10.2802,3.1652 11.1619,2.9946 12.0514,3.0001C15.7629,3.0277 18.7317,6.1128 18.7317,9.8347V10.4999C18.7317,13.8577 19.4342,15.8061 20.0529,16.871C20.1196,16.9848 20.155,17.1142 20.1558,17.246C20.1565,17.3779 20.1224,17.5076 20.0569,17.6221C19.9915,17.7366 19.897,17.8318 19.7831,17.8982C19.6691,17.9645 19.5396,17.9996 19.4078,17.9999H4.5922C4.4603,17.9996 4.3309,17.9645 4.2169,17.8981C4.1029,17.8318 4.0084,17.7366 3.943,17.622C3.8776,17.5075 3.8435,17.3778 3.8442,17.2459C3.845,17.114 3.8805,16.9846 3.9471,16.8709C4.5662,15.8059 5.269,13.8575 5.269,10.4999L5.269,9.7499Z"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
+  <path
+      android:strokeWidth="1"
+      android:pathData="M9,18V18.75C9,19.5456 9.3161,20.3087 9.8787,20.8713C10.4413,21.4339 11.2044,21.75 12,21.75C12.7956,21.75 13.5587,21.4339 14.1213,20.8713C14.6839,20.3087 15,19.5456 15,18.75V18"
+      android:strokeLineJoin="round"
+      android:fillColor="#00000000"
+      android:strokeColor="#000000"
+      android:strokeLineCap="round"/>
 </vector>
