--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -11,12 +11,12 @@
         android:id="@+id/menu_map"
         android:enabled="true"
         android:icon="@drawable/ic_map"
-        android:title="map" />
+        android:title="지도" />
 
     <item
         android:id="@+id/menu_info"
         android:enabled="true"
         android:icon="@drawable/ic_info"
-        android:title="info" />
+        android:title="정보" />
 
 </menu>
