--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,21 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.InfoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tv_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/fragment_info_tv"
-        android:textSize="36sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+            <Space
+                android:id="@+id/spacetop"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_info_message"
+                android:layout_width="match_parent"
+                android:layout_height="63dp"
+                android:fontFamily="@font/spoqahansansneo_regular"
+                android:gravity="top"
+                android:letterSpacing="-0.02"
+                android:lineSpacingExtra="8sp"
+                android:text="@string/info_message"
+                android:textColor="@color/gray600"
+                android:textSize="20sp"
+                android:translationY="-4sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/spacetop" />
+
+            <Space
+                android:id="@+id/spacebelowmessage"
+                android:layout_width="match_parent"
+                android:layout_height="44dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tv_info_message" />
+
+            <ImageButton
+                android:id="@+id/ib_how_to_aed"
+                android:layout_width="0dp"
+                android:layout_height="220dp"
+                android:background="@drawable/btn_how_to_aed"
+                android:contentDescription="@string/how_to_aed"
+                android:elevation="24dp"
+                android:paddingStart="13dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="5dp"
+                app:layout_constraintDimensionRatio="0.74"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/ib_how_to_cpr"
+                app:layout_constraintTop_toBottomOf="@id/spacebelowmessage"
+                app:layout_constraintHorizontal_weight="6"/>
+
+            <ImageButton
+                android:id="@+id/ib_how_to_cpr"
+                android:layout_width="0dp"
+                android:layout_height="220dp"
+                android:background="@drawable/btn_how_to_cpr"
+                android:contentDescription="@string/how_to_cpr"
+                android:elevation="24dp"
+                android:paddingStart="10dp"
+                android:paddingTop="5dp"
+                android:paddingEnd="5dp"
+                app:layout_constraintDimensionRatio="0.74"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/ib_how_to_aed"
+                app:layout_constraintTop_toBottomOf="@id/spacebelowmessage"
+                app:layout_constraintHorizontal_weight="6"/>
+
+            <ImageButton
+                android:id="@+id/ib_how_to_disaster"
+                android:layout_width="0dp"
+                android:layout_height="220dp"
+                android:background="@drawable/btn_how_to_disaster"
+                android:contentDescription="@string/how_to_disaster"
+                android:elevation="24dp"
+                android:paddingStart="13dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="5dp"
+                app:layout_constraintDimensionRatio="0.74"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/ib_how_to_checklist"
+                app:layout_constraintTop_toBottomOf="@id/ib_how_to_aed"
+                app:layout_constraintHorizontal_weight="6"/>
+
+            <ImageButton
+                android:id="@+id/ib_how_to_checklist"
+                android:layout_width="0dp"
+                android:layout_height="220dp"
+                android:background="@drawable/btn_how_to_checklist"
+                android:contentDescription="@string/how_to_cpr"
+                android:elevation="24dp"
+                android:paddingStart="10dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="5dp"
+                app:layout_constraintDimensionRatio="0.74"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/ib_how_to_disaster"
+                app:layout_constraintTop_toBottomOf="@id/ib_how_to_cpr"
+                app:layout_constraintHorizontal_weight="6"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
