--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -22,13 +22,17 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gps_address">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -53,6 +57,7 @@
                 android:layout_marginTop="25dp"
                 android:background="#00FFFFFF"
                 android:src="@drawable/btn_sms_to_119"
+                android:contentDescription="@string/btn_119"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_select_num" />
@@ -64,6 +69,7 @@
                 android:layout_marginTop="12dp"
                 android:background="#00FFFFFF"
                 android:src="@drawable/btn_sms_to_112"
+                android:contentDescription="@string/btn_112"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_119" />
@@ -75,6 +81,7 @@
                 android:layout_marginTop="12dp"
                 android:background="#00FFFFFF"
                 android:src="@drawable/btn_sms_to_fav_an"
+                android:contentDescription="@string/btn_fav"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btn_112" />
@@ -101,6 +108,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="17dp"
                 android:src="@drawable/img_sms_ex"
+                android:contentDescription="@string/img_sms"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/txt_sms_start" />
+
+            <TextView
+                android:id="@+id/txt_sms"
+                android:layout_width="255dp"
+                android:layout_height="71dp"
+                android:layout_marginTop="35dp"
+                android:layout_marginRight="90dp"
+                android:gravity="left"
+                android:textColor="#1B6DB1"
+                android:textSize="14sp"
+                android:fontFamily="@font/spoqahansansneo_regular"
+                android:textFontWeight="700"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txt_sms_start" />
@@ -126,15 +149,12 @@
                 android:layout_marginTop="9dp"
                 android:background="#00FFFFFF"
                 android:src="@drawable/btn_amb_num"
+                android:contentDescription="@string/btn_amb"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/txt_amb" />
+                app:layout_constraintTop_toBottomOf="@id/txt_amb"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-
     </ScrollView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
