--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,12 +33,12 @@
             android:id="@+id/addressTextView"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:lines="1"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:text="hello"
             android:drawableLeft="@drawable/ic_gps"
-            android:drawablePadding="5dip"/>
+            android:drawablePadding="5dip"
+            android:gravity="center"
+            android:lines="1"
+            android:text="hello" />
 
     </LinearLayout>
 
