--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,28 +19,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/toolbar" />
 
-    <LinearLayout
-        android:id="@+id/myAddress"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+<!--    <LinearLayout-->
+<!--        android:id="@+id/myAddress"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="30dp"-->
+<!--        android:orientation="vertical"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/frameLayout"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/toolbar">-->
 
-        <TextView
-            android:id="@+id/addressTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:drawableLeft="@drawable/ic_gps"
-            android:drawablePadding="5dip"
-            android:gravity="center"
-            android:lines="1"
-            android:text="hello" />
+<!--        <TextView-->
+<!--            android:id="@+id/addressTextView"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:drawableLeft="@drawable/ic_gps"-->
+<!--            android:drawablePadding="5dip"-->
+<!--            android:gravity="center"-->
+<!--            android:lines="1"-->
+<!--            android:text="hello" />-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
 
     <FrameLayout
@@ -51,7 +51,7 @@
         app:layout_constraintEnd_toEndOf="parent"
 
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/myAddress">
+        app:layout_constraintTop_toBottomOf="@id/space">
 
     </FrameLayout>
 
