--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -28,10 +28,20 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="HI!!!"
+            android:text="Button"
             android:textStyle="bold" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/aedNumber"
+        android:layout_width="0dp"
+        android:layout_height="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bottomSheetButtonLayout"
+        app:layout_constraintBottom_toTopOf="@id/lineView"
+        android:layout_marginStart="15dp" />
 
     <View
         android:id="@+id/lineView"
@@ -40,7 +50,7 @@
         android:background="#cccccc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomSheetButtonLayout"/>
+        app:layout_constraintTop_toBottomOf="@+id/aedNumber" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
