--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -33,6 +33,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -50,7 +51,7 @@
                 android:id="@+id/txt_select_num"
                 android:layout_width="wrap_content"
                 android:layout_height="19dp"
-                android:layout_marginTop="44dp"
+                android:layout_marginTop="28dp"
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/txt_select_num"
                 android:textColor="@color/gray600"
