-changed aed layout

--- a/app/src/main/res/layout/fragment_aed.xml
+++ b/app/src/main/res/layout/fragment_aed.xml
@@ -12,9 +12,11 @@
 
     <ScrollView
         android:id="@+id/info_aed_layout"
+        style="@android:style/Widget.DeviceDefault.ScrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/layout_space">
 
         <LinearLayout
