bottom sheet Dialog UI

--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -44,7 +44,9 @@
         android:layout_marginTop="50dp" />
 
 
-    <include layout="@layout/bottom_sheet" />
+    <include
+        android:id="@+id/bottomSheetDialog"
+        layout="@layout/bottom_sheet" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
