--- a/app/src/main/res/drawable/map_category_button.xml
+++ b/app/src/main/res/drawable/map_category_button.xml
@@ -3,5 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="100dp" />
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/white" />
+
 </shape>
