--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/map_top_radius_white_background"
     app:behavior_peekHeight="60dp"
+    app:behavior_hideable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
     <View
@@ -16,41 +17,81 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
+    <HorizontalScrollView
         android:id="@+id/bottomSheetButtonLayout"
         android:layout_width="0dp"
         android:layout_height="60dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
+        android:paddingHorizontal="5dp"
+        android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
-    </LinearLayout>
+            <android.widget.Button
+                android:id="@+id/aedCategoryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="12dp"
+                android:background="@drawable/map_category_button"
+                android:drawableStart="@drawable/map_aed_symbol"
+                android:padding="5dp"
+                android:text="심장충격기"
+                android:textColor="@drawable/map_button_text_color" />
+
+            <android.widget.Button
+                android:id="@+id/shelterCategoryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="12dp"
+                android:background="@drawable/map_category_button"
+                android:drawableStart="@drawable/map_shelter_symbol"
+                android:padding="5dp"
+                android:text="대피소" />
+
+            <android.widget.Button
+                android:id="@+id/emergencyRoomCategoryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="12dp"
+                android:background="@drawable/map_category_button"
+                android:drawableStart="@drawable/map_emergency_room_symbol"
+                android:padding="5dp"
+                android:text="응급실"
+                android:textColor="@drawable/map_button_text_color" />
+
+            <android.widget.Button
+                android:id="@+id/pharmacyCategoryButton"
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="12dp"
+                android:background="@drawable/map_category_button"
+                android:drawableStart="@drawable/map_pharmacy_symbol"
+                android:padding="5dp"
+                android:text="24시 약국" />
+        </LinearLayout>
+
+    </HorizontalScrollView>
 
     <TextView
         android:id="@+id/aedNumber"
         android:layout_width="0dp"
         android:layout_height="30dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/bottomSheetButtonLayout"
-        app:layout_constraintBottom_toTopOf="@id/lineView"
-        android:layout_marginStart="15dp" />
-
-    <View
-        android:id="@+id/lineView"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="#cccccc"
+        android:layout_marginStart="15dp"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/aedNumber" />
+        app:layout_constraintTop_toBottomOf="@id/bottomSheetButtonLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -59,6 +100,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lineView" />
+        app:layout_constraintTop_toBottomOf="@+id/aedNumber" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
