changed dialog and ambulance list

--- a/app/src/main/res/layout/fragment_sos.xml
+++ b/app/src/main/res/layout/fragment_sos.xml
@@ -9,13 +9,12 @@
     <TextView
         android:id="@+id/gps_address"
         android:layout_width="wrap_content"
-        android:layout_height="19dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:drawablePadding="8dp"
+        android:drawablePadding="8dip"
         android:fontFamily="@font/spoqa_han_sans_neo_regular"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:textFontWeight="400"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -55,7 +54,7 @@
                 android:fontFamily="@font/spoqa_han_sans_neo_bold"
                 android:text="@string/txt_select_num"
                 android:textColor="@color/gray600"
-                android:textFontWeight="700"
+                android:textFontWeight="900"
                 android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
