--- a/app/src/main/res/layout/ambulance_list.xml
+++ b/app/src/main/res/layout/ambulance_list.xml
@@ -38,7 +38,7 @@
         app:layout_constraintTop_toBottomOf="@id/amb_company" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/amb_tel_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
