--- a/app/src/main/res/layout/fragment_sos_amb.xml
+++ b/app/src/main/res/layout/fragment_sos_amb.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_sos_amb"
     tools:context=".fragment.SosAmbFragment">
 
     <FrameLayout
@@ -16,7 +17,7 @@
 
         <TextView
             android:id="@+id/amd_loc"
-            android:layout_width="71dp"
+            android:layout_width="70dp"
             android:layout_height="19dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
@@ -26,7 +27,7 @@
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:textSize="16sp"
             android:drawableRight="@drawable/sos_btn_loc"
-            android:drawablePadding="9dp"/>
+            android:drawablePadding="8dp" />
 
     </FrameLayout>
 
@@ -52,7 +53,6 @@
         android:text="'인타임'은 정보 중개자로 업체 전화 후 관련된 문제에 대한 의무와 책임은 각 업체에 있으며, 민간 구급차를 이용하면 금액이 부과됩니다. 이용 시 부과되는 이용료는 담당 업체마다 상이합니다."
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/amb_recycler_view"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
